# NIDS-FL

./: .gitignore  README.md  hehehe.md
Container/pentest_env/: Dockerfile.attacker  Dockerfile.model  README.md  app.py  docker-compose.yml  requirements_api.txt  start.sh
EDA/: README_PREPROCESSING.md  load_preprocessed_example.ipynb  preprocessing_pipeline.py
EDA/Cleaned Dataset/: clean_ton_iot_data.py
EDA/EDA_NEW/: CleanedDataset.py  EDA.py  EDA_v2.py  Run_EDA_Analysis.ipynb  TON_IoT_EDA_Report.md
FL_TensorF_Flower_AVG/: __init__.py  main_notebook.ipynb  pyproject.toml  requirements.txt  research_hypertuning.py  research_notebook.ipynb  verify_setup.py
FL_TensorF_Flower_AVG/gridsearch_research/: GRIDSEARCH_GUIDE.md  README.md  README_GRIDSEARCH.md  SETUP_SUMMARY.md  check_progress.py  client_app.py  research_hypertuning_gridsearch.py  run_gridsearch.py  server_app.py  start_gridsearch.sh  summary_report.md  task.py  utils.py
FL_TensorF_Flower_PROX/: QUICKSTART.md  README.md  __init__.py  client_app.py  main_notebook.ipynb  pyproject.toml  research_hypertuning.py  research_notebook.ipynb  server_app.py  verify_setup.py
FL_TensorF_Flower_PROX/gridsearch_research/: GRIDSEARCH_GUIDE.md  README_GRIDSEARCH.md  SETUP_SUMMARY.md  check_progress.py  research_hypertuning_gridsearch.py  run_gridsearch.py  start_gridsearch.sh  task.py  utils.py  verify_setup.py
ShortResult/: result.md
ShortResult/Avg/: research_notebookbs512ep1lr5-4a03.ipynb  research_notebookbs512ep1lr5-4a5.ipynb
ShortResult/Prox/: research_notebookbs512ep1lr5-4a03mu1-2.ipynb  (+3 more)
(+181 files in other folders)
