[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl_tensorf_flower_prox"
version = "1.0.0"
description = "Federated Learning with Flower and FedProx for ToN-IoT Dataset"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.23.0,<2.0",
    "flwr-datasets[vision]>=0.0.2,<1.0.0",
    "tensorflow>=2.12.0,<3.0.0",
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "elnoersan"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
fraction-train = 1.0
fraction-evaluate = 1.0
min-fit-clients = 2
min-evaluate-clients = 2
min-available-clients = 2
local-epochs = 1
batch-size = 256
learning-rate = 0.001
verbose = 0
mu = 0.01  # FedProx proximal term coefficient

# Model-specific configs (will be overridden during runtime)
model-type = "mlp_binary"
input-shape = 30
num-classes = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
